# pytonium

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  ONBOARDING.md  PYTONIUM_STATUS_REPORT.md  Pytonium_Documentation.md  claude_code_pytonium_audit_instructions.md  docker-compose.yml  how-to-build-from-source.md  readme.md  test.d.ts
.claude/: settings.local.json
.github/workflows/: build.yml
cef-binaries/: README.txt
cef-binaries-linux/: README.md  README.txt
cef-binaries-windows/: MODULE.bazel  README.txt
cef-binaries/cmake/: cef_macros.cmake
docs/misc/: PYTONIUM_STATUS_REPORT.md  activate_env.txt  docs.md
example_widgets/clock/: index.html  widget.json
example_widgets/system-monitor/: widget.json
future_extension/: pytonium_shell_architecture.md
pythonium_shell_examples/examples_wallpaper/live-wallpaper/: widget.json
pythonium_shell_examples/examples_widgets/system-monitor/: index.html
pythonium_shell_examples/pythonium_shell_examples_combined/example_widgets/dashboard/: widget.json
pythonium_shell_examples/pythonium_shell_examples_combined/example_widgets/status-bar/: widget.json
pythonium_shell_examples/widgets_dashboard_example/dashboard/: index.html  widget.json
pytonium_examples/: .gitignore  README.md
pytonium_examples/pytonium_example_babylon_js/: babylonjs.loaders.d.ts  babylonjs.loaders.js  index.html  main.py  test.d.ts
pytonium_examples/pytonium_example_control_center/: data_analyzer.py  index.html  main.py
pytonium_examples/pytonium_example_data_studio/: README.md  data_manager.py  index.html  main.py  sample_sales_data.csv
pytonium_examples/pytonium_example_frameless/: README.md  index.html  main.py  test_resize.html  test_resize_simple.py
pytonium_examples/pytonium_example_line_graph/: index.html  main.py
pytonium_examples/pytonium_example_simple/: index.html  main.py  test.d.ts
src/: pyproject.toml
src/Pytonium_Dev/: README.md  clean_up_project.py  pyproject.toml  setup.py
src/Pytonium_Dev/Pytonium/: __init__.py
src/Pytonium_Dev/Pytonium/src/: __init__.pyx  pytonium.pyx
src/Pytonium_Dev/Pytonium/src/header/: cefsimplewrapper.pxd  cefwrapper.pxd
src/Pytonium_Dev/PytoniumTests/: index.html  main.py
src/cefsubprocess/: CMakeLists.txt  cefsubprocess.cc  cefsubprocess.exe.manifest
src/cefwrapper/: CMakeLists.txt  cef_wrapper_browser_process_handler.cc  cef_wrapper_client_handler.cc  cef_wrapper_client_handler_win.cc  cef_wrapper_render_process_handler.cc  cef_wrapper_render_process_handler.h  file_util.h  global_vars.h  javascript_binding.h  javascript_bindings_handler.h  javascript_python_binding_handler.h  library.cpp  library.h
src/cefwrappertest/: CMakeLists.txt  main.cpp
src/pytonium_library/: CMakeLists.txt  Logging.h  application_context_menu_binding.h  application_state_javascript_handler.h  application_state_manager.h  application_state_python.h  cef_custom_scheme.h  cef_value_wrapper.h  cef_wrapper_app.cc  cef_wrapper_app.h  cef_wrapper_browser_process_handler.cc  cef_wrapper_browser_process_handler.h  cef_wrapper_client_handler.cc  cef_wrapper_client_handler.h  cef_wrapper_client_handler_linux.cc  cef_wrapper_client_handler_win.cc  cef_wrapper_render_process_handler.cc  cef_wrapper_render_process_handler.h  custom_protocol_scheme_handler.cc  custom_protocol_scheme_handler.h  global_vars.h  javascript_binding.h  javascript_bindings_handler.h  javascript_python_binding_handler.h  osr_render_handler_dispatcher.cc  osr_render_handler_dispatcher.h  osr_window_win.cc  osr_window_win.h  pytonium_library.cpp  pytonium_library.h
src/pytonium_library_test/: CMakeLists.txt  custom_frame.html  index.html  index_old.html  main.cpp
src/pytonium_python_framework/: 0.16  CMakeLists.txt  MANIFEST.in  StateManagement.py  TestInPlace.py  clean_up_project.py  generate_pyi.py  prepare_python_project_files.py  pyproject.toml  setup.cfg  setup.py  test_multi_window.py
src/pytonium_python_framework/Pytonium/: __init__.py  pytonium.pyi
src/pytonium_python_framework/Pytonium/src/: CMakeLists.txt  __init__.pyx  pytonium.pyx  pytonium_library.pxd
src/pytonium_python_framework/Pytonium/src/cef-binaries-windows/: README.txt
src/pytonium_python_framework/Pytonium/src/cef-binaries-windows/bazel/: variables.bzl
src/pytonium_python_framework/Pytonium/src/header/: cefwrapper.pxd
src/pytonium_python_framework/Pytonium/src/pytonium_subprocess/: CMakeLists.txt  pytonium_subprocess.exe.manifest
src/pytonium_python_framework/Pytonium/test/: index.html  main.py
src/pytonium_python_framework/PytoniumLibrary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pytonium_python_framework/PytoniumTest/: index.html  main.py
src/pytonium_python_framework/PytoniumTests/: main.py
src/pytonium_shell/: README.md  __init__.py  __main__.py  hotkey_listener.py  position_store.py  pyproject.toml  shell_manager.py  system_services.py  theme.py  widget_instance.py  widget_manager.py  win32_window_helper.py
src/pytonium_shell/example_widgets/dashboard/: backend.py  index.html  widget.json
src/pytonium_shell/example_widgets/live-wallpaper/: index.html
src/pytonium_shell/example_widgets/status-bar/: index.html
src/pytonium_shell/example_widgets/system-monitor/: backend.py
src/pytonium_shell/pytonium_shell/: cli.py  hot_reload.py  hotkey_listener.py  shell_manager.py  system_tray.py  widget_instance.py  win32_window_helper.py
src/pytonium_subprocess/: CMakeLists.txt  pytonium_subprocess.cc  pytonium_subprocess_linux.cc
src/venv2/: pyvenv.cfg
tests/: test_multi_window.py  test_pytonium_api.py
widgets_dashboard_example/dashboard/: backend.py
