[metadata]
name = Pytonium
version = 0.0.13
description = A framework for building python apps, with a GUI based on the web-technologies HTML, CSS and Javascript.
long_description = file: README.md
long_description_content_type = text/markdown
author = Maximilian Winter
author_email = maximilian.winter.91@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
requires_python = >=3.10

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
where = .
include = Pytonium*

[scikit-build]
build-type = Release
cmake.minimum-version = 3.18
