[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytonium-shell"
version = "0.0.1"
description = "Desktop widget framework powered by Pytonium — transparent HTML/CSS/JS overlays for Windows"
requires-python = ">=3.10"
license = "BSD-3-Clause"
dependencies = [
    "Pytonium>=0.0.13",
]

[project.optional-dependencies]
system = ["psutil>=5.9"]
reload = ["watchdog>=3.0"]
all = ["psutil>=5.9", "watchdog>=3.0"]

[project.scripts]
pytonium-shell = "pytonium_shell.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytonium_shell*"]

[tool.setuptools.package-data]
"pytonium_shell" = ["example_widgets/**/*"]
